// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createEslintCoreRules allows passing custom rules 1`] = `
Object {
  "accessor-pairs": "off",
  "array-bracket-newline": "off",
  "array-bracket-spacing": "off",
  "array-callback-return": Array [
    "error",
    Object {
      "checkForEach": true,
    },
  ],
  "array-element-newline": "off",
  "arrow-body-style": 0,
  "arrow-parens": "off",
  "arrow-spacing": "off",
  "block-scoped-var": "off",
  "block-spacing": "off",
  "brace-style": "off",
  "camelcase": "off",
  "capitalized-comments": "off",
  "class-methods-use-this": "off",
  "comma-dangle": "off",
  "comma-spacing": "off",
  "comma-style": "off",
  "complexity": "off",
  "computed-property-spacing": "off",
  "consistent-return": "off",
  "consistent-this": "off",
  "constructor-super": "error",
  "curly": Array [
    "warn",
    "all",
  ],
  "default-case": "error",
  "default-case-last": "error",
  "default-param-last": "error",
  "dot-location": "off",
  "dot-notation": "warn",
  "eol-last": "off",
  "eqeqeq": "warn",
  "for-direction": "off",
  "func-call-spacing": "off",
  "func-name-matching": "off",
  "func-names": Array [
    "warn",
    "as-needed",
  ],
  "func-style": "off",
  "function-call-argument-newline": "off",
  "function-paren-newline": "off",
  "generator-star": "off",
  "generator-star-spacing": "off",
  "getter-return": "warn",
  "grouped-accessor-pairs": "off",
  "guard-for-in": "warn",
  "id-denylist": "off",
  "id-length": "off",
  "id-match": "off",
  "implicit-arrow-linebreak": "off",
  "indent": "off",
  "indent-legacy": "off",
  "init-declarations": "off",
  "jsx-quotes": "off",
  "key-spacing": "off",
  "keyword-spacing": "off",
  "line-comment-position": "off",
  "linebreak-style": "off",
  "lines-around-comment": 0,
  "lines-between-class-members": "warn",
  "max-classes-per-file": "off",
  "max-depth": "off",
  "max-len": 0,
  "max-lines": "off",
  "max-lines-per-function": "off",
  "max-nested-callbacks": "off",
  "max-params": "off",
  "max-statements": "off",
  "max-statements-per-line": "off",
  "multiline-comment-style": "off",
  "multiline-ternary": "off",
  "new-cap": "warn",
  "new-parens": "off",
  "newline-per-chained-call": "off",
  "no-alert": "error",
  "no-array-constructor": "error",
  "no-arrow-condition": "off",
  "no-async-promise-executor": "error",
  "no-await-in-loop": "error",
  "no-bitwise": "warn",
  "no-caller": "error",
  "no-case-declarations": "warn",
  "no-class-assign": "error",
  "no-comma-dangle": "off",
  "no-compare-neg-zero": "error",
  "no-cond-assign": Array [
    "warn",
    "except-parens",
  ],
  "no-confusing-arrow": 0,
  "no-console": "warn",
  "no-const-assign": "error",
  "no-constant-condition": "error",
  "no-constructor-return": "error",
  "no-continue": "off",
  "no-control-regex": "warn",
  "no-debugger": "warn",
  "no-delete-var": "off",
  "no-div-regex": "warn",
  "no-dupe-args": "error",
  "no-dupe-class-members": "error",
  "no-dupe-else-if": "warn",
  "no-dupe-keys": "warn",
  "no-duplicate-case": "warn",
  "no-duplicate-imports": "off",
  "no-else-return": "warn",
  "no-empty": "warn",
  "no-empty-character-class": "warn",
  "no-empty-function": "error",
  "no-empty-pattern": "warn",
  "no-eq-null": "error",
  "no-eval": "error",
  "no-ex-assign": "warn",
  "no-extend-native": "error",
  "no-extra-bind": "warn",
  "no-extra-boolean-cast": "warn",
  "no-extra-label": "off",
  "no-extra-parens": "off",
  "no-extra-semi": "off",
  "no-fallthrough": "warn",
  "no-floating-decimal": "off",
  "no-func-assign": "warn",
  "no-global-assign": "warn",
  "no-implicit-coercion": Array [
    "warn",
    Object {
      "boolean": false,
      "number": true,
      "string": true,
    },
  ],
  "no-implicit-globals": "error",
  "no-implied-eval": "error",
  "no-import-assign": "error",
  "no-inline-comments": "off",
  "no-inner-declarations": "warn",
  "no-invalid-regexp": "error",
  "no-invalid-this": "error",
  "no-irregular-whitespace": "warn",
  "no-iterator": "off",
  "no-label-var": "off",
  "no-labels": "error",
  "no-lone-blocks": "off",
  "no-lonely-if": "warn",
  "no-loop-func": "error",
  "no-loss-of-precision": "error",
  "no-magic-numbers": "off",
  "no-misleading-character-class": "warn",
  "no-mixed-operators": 0,
  "no-mixed-spaces-and-tabs": "off",
  "no-multi-assign": "error",
  "no-multi-spaces": "off",
  "no-multi-str": "off",
  "no-multiple-empty-lines": "off",
  "no-negated-condition": "error",
  "no-nested-ternary": "off",
  "no-new": "error",
  "no-new-func": "error",
  "no-new-object": "error",
  "no-new-symbol": "off",
  "no-new-wrappers": "error",
  "no-obj-calls": "error",
  "no-octal": "warn",
  "no-octal-escape": "error",
  "no-param-reassign": "error",
  "no-plusplus": "off",
  "no-promise-executor-return": "error",
  "no-proto": "error",
  "no-prototype-builtins": "error",
  "no-redeclare": "error",
  "no-regex-spaces": "warn",
  "no-reserved-keys": "off",
  "no-restricted-exports": "off",
  "no-restricted-globals": Array [
    "error",
    "addEventListener",
    "blur",
    "close",
    "closed",
    "confirm",
    "defaultStatus",
    "defaultstatus",
    "event",
    "external",
    "find",
    "focus",
    "frameElement",
    "frames",
    "history",
    "innerHeight",
    "innerWidth",
    "length",
    "location",
    "locationbar",
    "menubar",
    "moveBy",
    "moveTo",
    "name",
    "onblur",
    "onerror",
    "onfocus",
    "onload",
    "onresize",
    "onunload",
    "open",
    "opener",
    "opera",
    "outerHeight",
    "outerWidth",
    "pageXOffset",
    "pageYOffset",
    "parent",
    "print",
    "removeEventListener",
    "resizeBy",
    "resizeTo",
    "screen",
    "screenLeft",
    "screenTop",
    "screenX",
    "screenY",
    "scroll",
    "scrollbars",
    "scrollBy",
    "scrollTo",
    "scrollX",
    "scrollY",
    "self",
    "status",
    "statusbar",
    "stop",
    "toolbar",
    "top",
  ],
  "no-restricted-imports": "off",
  "no-restricted-properties": "off",
  "no-restricted-syntax": "off",
  "no-return-assign": "error",
  "no-return-await": "error",
  "no-script-url": "error",
  "no-self-assign": "error",
  "no-self-compare": "error",
  "no-sequences": "error",
  "no-setter-return": "error",
  "no-shadow": "off",
  "no-shadow-restricted-names": "error",
  "no-space-before-semi": "off",
  "no-spaced-func": "off",
  "no-sparse-arrays": "warn",
  "no-tabs": 0,
  "no-template-curly-in-string": "warn",
  "no-ternary": "off",
  "no-this-before-super": "error",
  "no-throw-literal": "error",
  "no-trailing-spaces": "off",
  "no-undef": "error",
  "no-undef-init": "warn",
  "no-undefined": "off",
  "no-underscore-dangle": "off",
  "no-unexpected-multiline": 0,
  "no-unmodified-loop-condition": "error",
  "no-unneeded-ternary": "warn",
  "no-unreachable": "warn",
  "no-unreachable-loop": "off",
  "no-unsafe-finally": "error",
  "no-unsafe-negation": "warn",
  "no-unused-expressions": Array [
    "error",
    Object {
      "allowShortCircuit": true,
      "allowTaggedTemplates": true,
      "allowTernary": true,
    },
  ],
  "no-unused-labels": "off",
  "no-unused-vars": Array [
    "warn",
    Object {
      "args": "none",
      "ignoreRestSiblings": true,
    },
  ],
  "no-use-before-define": Array [
    "warn",
    Object {
      "classes": false,
      "functions": false,
      "variables": false,
    },
  ],
  "no-useless-backreference": "warn",
  "no-useless-call": "error",
  "no-useless-catch": "off",
  "no-useless-computed-key": "warn",
  "no-useless-concat": "error",
  "no-useless-constructor": "warn",
  "no-useless-escape": "warn",
  "no-useless-rename": "warn",
  "no-useless-return": "warn",
  "no-var": "error",
  "no-void": "warn",
  "no-warning-comments": "off",
  "no-whitespace-before-property": "off",
  "no-with": "error",
  "no-wrap-func": "off",
  "nonblock-statement-body-position": "off",
  "object-curly-newline": "off",
  "object-curly-spacing": "off",
  "object-property-newline": "off",
  "object-shorthand": "warn",
  "one-var": Array [
    "warn",
    "never",
  ],
  "one-var-declaration-per-line": "off",
  "operator-assignment": Array [
    "warn",
    "always",
  ],
  "operator-linebreak": "off",
  "padded-blocks": "off",
  "padding-line-between-statements": "off",
  "prefer-arrow-callback": "warn",
  "prefer-const": "warn",
  "prefer-destructuring": "warn",
  "prefer-exponentiation-operator": "warn",
  "prefer-named-capture-group": "off",
  "prefer-numeric-literals": "warn",
  "prefer-object-spread": "warn",
  "prefer-promise-reject-errors": "error",
  "prefer-regex-literals": "error",
  "prefer-rest-params": "error",
  "prefer-spread": "error",
  "prefer-template": "warn",
  "quote-props": "off",
  "quotes": 0,
  "radix": "off",
  "require-atomic-updates": "warn",
  "require-await": "error",
  "require-unicode-regexp": "error",
  "require-yield": "error",
  "rest-spread-spacing": "off",
  "semi": "off",
  "semi-spacing": "off",
  "semi-style": "off",
  "sort-imports": "off",
  "sort-keys": "off",
  "sort-vars": "off",
  "space-after-function-name": "off",
  "space-after-keywords": "off",
  "space-before-blocks": "off",
  "space-before-function-paren": "off",
  "space-before-function-parentheses": "off",
  "space-before-keywords": "off",
  "space-in-brackets": "off",
  "space-in-parens": "off",
  "space-infix-ops": "off",
  "space-return-throw-case": "off",
  "space-unary-ops": "off",
  "space-unary-word-ops": "off",
  "spaced-comment": Array [
    "warn",
    "always",
  ],
  "strict": "off",
  "switch-colon-spacing": "off",
  "symbol-description": "error",
  "template-curly-spacing": "off",
  "template-tag-spacing": "off",
  "unicode-bom": "off",
  "use-isnan": "off",
  "valid-typeof": "warn",
  "vars-on-top": "off",
  "wrap-iife": "off",
  "wrap-regex": "off",
  "yield-star-spacing": "off",
  "yoda": "warn",
}
`;

exports[`createEslintCoreRules matches snapshot with typescript 1`] = `
Object {
  "accessor-pairs": "off",
  "array-bracket-newline": "off",
  "array-bracket-spacing": "off",
  "array-callback-return": "off",
  "array-element-newline": "off",
  "arrow-body-style": 0,
  "arrow-parens": "off",
  "arrow-spacing": "off",
  "block-scoped-var": "off",
  "block-spacing": "off",
  "brace-style": "off",
  "camelcase": "off",
  "capitalized-comments": "off",
  "class-methods-use-this": "off",
  "comma-dangle": "off",
  "comma-spacing": "off",
  "comma-style": "off",
  "complexity": "off",
  "computed-property-spacing": "off",
  "consistent-return": "off",
  "consistent-this": "off",
  "constructor-super": "off",
  "curly": Array [
    "warn",
    "all",
  ],
  "default-case": "off",
  "default-case-last": "error",
  "default-param-last": "off",
  "dot-location": "off",
  "dot-notation": "off",
  "eol-last": "off",
  "eqeqeq": "warn",
  "for-direction": "error",
  "func-call-spacing": "off",
  "func-name-matching": "off",
  "func-names": Array [
    "warn",
    "as-needed",
  ],
  "func-style": "off",
  "function-call-argument-newline": "off",
  "function-paren-newline": "off",
  "generator-star": "off",
  "generator-star-spacing": "off",
  "getter-return": "off",
  "grouped-accessor-pairs": "off",
  "guard-for-in": "warn",
  "id-denylist": "off",
  "id-length": "off",
  "id-match": "off",
  "implicit-arrow-linebreak": "off",
  "indent": "off",
  "indent-legacy": "off",
  "init-declarations": "off",
  "jsx-quotes": "off",
  "key-spacing": "off",
  "keyword-spacing": "off",
  "line-comment-position": "off",
  "linebreak-style": "off",
  "lines-around-comment": 0,
  "lines-between-class-members": "off",
  "max-classes-per-file": "off",
  "max-depth": "off",
  "max-len": 0,
  "max-lines": "off",
  "max-lines-per-function": "off",
  "max-nested-callbacks": "off",
  "max-params": "off",
  "max-statements": "off",
  "max-statements-per-line": "off",
  "multiline-comment-style": "off",
  "multiline-ternary": "off",
  "new-cap": "warn",
  "new-parens": "off",
  "newline-per-chained-call": "off",
  "no-alert": "error",
  "no-array-constructor": "off",
  "no-arrow-condition": "off",
  "no-async-promise-executor": "error",
  "no-await-in-loop": "error",
  "no-bitwise": "warn",
  "no-caller": "error",
  "no-case-declarations": "warn",
  "no-class-assign": "error",
  "no-comma-dangle": "off",
  "no-compare-neg-zero": "error",
  "no-cond-assign": Array [
    "warn",
    "except-parens",
  ],
  "no-confusing-arrow": 0,
  "no-console": "warn",
  "no-const-assign": "off",
  "no-constant-condition": "error",
  "no-constructor-return": "off",
  "no-continue": "off",
  "no-control-regex": "warn",
  "no-debugger": "warn",
  "no-delete-var": "off",
  "no-div-regex": "warn",
  "no-dupe-args": "off",
  "no-dupe-class-members": "off",
  "no-dupe-else-if": "warn",
  "no-dupe-keys": "off",
  "no-duplicate-case": "warn",
  "no-duplicate-imports": "off",
  "no-else-return": "warn",
  "no-empty": "warn",
  "no-empty-character-class": "warn",
  "no-empty-function": "off",
  "no-empty-pattern": "warn",
  "no-eq-null": "error",
  "no-eval": "error",
  "no-ex-assign": "warn",
  "no-extend-native": "error",
  "no-extra-bind": "warn",
  "no-extra-boolean-cast": "warn",
  "no-extra-label": "off",
  "no-extra-parens": "off",
  "no-extra-semi": "off",
  "no-fallthrough": "warn",
  "no-floating-decimal": "off",
  "no-func-assign": "off",
  "no-global-assign": "warn",
  "no-implicit-coercion": Array [
    "warn",
    Object {
      "boolean": false,
      "number": true,
      "string": true,
    },
  ],
  "no-implicit-globals": "error",
  "no-implied-eval": "error",
  "no-import-assign": "off",
  "no-inline-comments": "off",
  "no-inner-declarations": "warn",
  "no-invalid-regexp": "error",
  "no-invalid-this": "error",
  "no-irregular-whitespace": "warn",
  "no-iterator": "off",
  "no-label-var": "off",
  "no-labels": "error",
  "no-lone-blocks": "off",
  "no-lonely-if": "warn",
  "no-loop-func": "off",
  "no-loss-of-precision": "off",
  "no-magic-numbers": "off",
  "no-misleading-character-class": "warn",
  "no-mixed-operators": 0,
  "no-mixed-spaces-and-tabs": "off",
  "no-multi-assign": "error",
  "no-multi-spaces": "off",
  "no-multi-str": "off",
  "no-multiple-empty-lines": "off",
  "no-negated-condition": "error",
  "no-nested-ternary": "off",
  "no-new": "error",
  "no-new-func": "error",
  "no-new-object": "error",
  "no-new-symbol": "off",
  "no-new-wrappers": "error",
  "no-obj-calls": "off",
  "no-octal": "warn",
  "no-octal-escape": "error",
  "no-param-reassign": "error",
  "no-plusplus": "off",
  "no-promise-executor-return": "error",
  "no-proto": "error",
  "no-prototype-builtins": "error",
  "no-redeclare": "off",
  "no-regex-spaces": "warn",
  "no-reserved-keys": "off",
  "no-restricted-exports": "off",
  "no-restricted-globals": Array [
    "error",
    "addEventListener",
    "blur",
    "close",
    "closed",
    "confirm",
    "defaultStatus",
    "defaultstatus",
    "event",
    "external",
    "find",
    "focus",
    "frameElement",
    "frames",
    "history",
    "innerHeight",
    "innerWidth",
    "length",
    "location",
    "locationbar",
    "menubar",
    "moveBy",
    "moveTo",
    "name",
    "onblur",
    "onerror",
    "onfocus",
    "onload",
    "onresize",
    "onunload",
    "open",
    "opener",
    "opera",
    "outerHeight",
    "outerWidth",
    "pageXOffset",
    "pageYOffset",
    "parent",
    "print",
    "removeEventListener",
    "resizeBy",
    "resizeTo",
    "screen",
    "screenLeft",
    "screenTop",
    "screenX",
    "screenY",
    "scroll",
    "scrollbars",
    "scrollBy",
    "scrollTo",
    "scrollX",
    "scrollY",
    "self",
    "status",
    "statusbar",
    "stop",
    "toolbar",
    "top",
  ],
  "no-restricted-imports": "off",
  "no-restricted-properties": "off",
  "no-restricted-syntax": "off",
  "no-return-assign": "error",
  "no-return-await": "off",
  "no-script-url": "error",
  "no-self-assign": "error",
  "no-self-compare": "error",
  "no-sequences": "error",
  "no-setter-return": "off",
  "no-shadow": "off",
  "no-shadow-restricted-names": "error",
  "no-space-before-semi": "off",
  "no-spaced-func": "off",
  "no-sparse-arrays": "warn",
  "no-tabs": 0,
  "no-template-curly-in-string": "warn",
  "no-ternary": "off",
  "no-this-before-super": "off",
  "no-throw-literal": "off",
  "no-trailing-spaces": "off",
  "no-undef": "off",
  "no-undef-init": "warn",
  "no-undefined": "off",
  "no-underscore-dangle": "off",
  "no-unexpected-multiline": 0,
  "no-unmodified-loop-condition": "error",
  "no-unneeded-ternary": "warn",
  "no-unreachable": "off",
  "no-unreachable-loop": "off",
  "no-unsafe-finally": "error",
  "no-unsafe-negation": "off",
  "no-unused-expressions": "off",
  "no-unused-labels": "off",
  "no-unused-vars": "off",
  "no-use-before-define": "off",
  "no-useless-backreference": "warn",
  "no-useless-call": "error",
  "no-useless-catch": "off",
  "no-useless-computed-key": "warn",
  "no-useless-concat": "error",
  "no-useless-constructor": "off",
  "no-useless-escape": "warn",
  "no-useless-rename": "warn",
  "no-useless-return": "warn",
  "no-var": "error",
  "no-void": "warn",
  "no-warning-comments": "off",
  "no-whitespace-before-property": "off",
  "no-with": "error",
  "no-wrap-func": "off",
  "nonblock-statement-body-position": "off",
  "object-curly-newline": "off",
  "object-curly-spacing": "off",
  "object-property-newline": "off",
  "object-shorthand": "warn",
  "one-var": Array [
    "warn",
    "never",
  ],
  "one-var-declaration-per-line": "off",
  "operator-assignment": Array [
    "warn",
    "always",
  ],
  "operator-linebreak": "off",
  "padded-blocks": "off",
  "padding-line-between-statements": "off",
  "prefer-arrow-callback": "warn",
  "prefer-const": "error",
  "prefer-destructuring": "warn",
  "prefer-exponentiation-operator": "warn",
  "prefer-named-capture-group": "off",
  "prefer-numeric-literals": "warn",
  "prefer-object-spread": "warn",
  "prefer-promise-reject-errors": "error",
  "prefer-regex-literals": "error",
  "prefer-rest-params": "error",
  "prefer-spread": "error",
  "prefer-template": "warn",
  "quote-props": "off",
  "quotes": 0,
  "radix": "off",
  "require-atomic-updates": "warn",
  "require-await": "off",
  "require-unicode-regexp": "error",
  "require-yield": "error",
  "rest-spread-spacing": "off",
  "semi": "off",
  "semi-spacing": "off",
  "semi-style": "off",
  "sort-imports": "off",
  "sort-keys": "off",
  "sort-vars": "off",
  "space-after-function-name": "off",
  "space-after-keywords": "off",
  "space-before-blocks": "off",
  "space-before-function-paren": "off",
  "space-before-function-parentheses": "off",
  "space-before-keywords": "off",
  "space-in-brackets": "off",
  "space-in-parens": "off",
  "space-infix-ops": "off",
  "space-return-throw-case": "off",
  "space-unary-ops": "off",
  "space-unary-word-ops": "off",
  "spaced-comment": Array [
    "warn",
    "always",
  ],
  "strict": "off",
  "switch-colon-spacing": "off",
  "symbol-description": "error",
  "template-curly-spacing": "off",
  "template-tag-spacing": "off",
  "unicode-bom": "off",
  "use-isnan": "off",
  "valid-typeof": "off",
  "vars-on-top": "off",
  "wrap-iife": "off",
  "wrap-regex": "off",
  "yield-star-spacing": "off",
  "yoda": "warn",
}
`;

exports[`createEslintCoreRules matches snapshot without typescript 1`] = `
Object {
  "accessor-pairs": "off",
  "array-bracket-newline": "off",
  "array-bracket-spacing": "off",
  "array-callback-return": Array [
    "error",
    Object {
      "checkForEach": true,
    },
  ],
  "array-element-newline": "off",
  "arrow-body-style": 0,
  "arrow-parens": "off",
  "arrow-spacing": "off",
  "block-scoped-var": "off",
  "block-spacing": "off",
  "brace-style": "off",
  "camelcase": "off",
  "capitalized-comments": "off",
  "class-methods-use-this": "off",
  "comma-dangle": "off",
  "comma-spacing": "off",
  "comma-style": "off",
  "complexity": "off",
  "computed-property-spacing": "off",
  "consistent-return": "off",
  "consistent-this": "off",
  "constructor-super": "error",
  "curly": Array [
    "warn",
    "all",
  ],
  "default-case": "error",
  "default-case-last": "error",
  "default-param-last": "error",
  "dot-location": "off",
  "dot-notation": "warn",
  "eol-last": "off",
  "eqeqeq": "warn",
  "for-direction": "error",
  "func-call-spacing": "off",
  "func-name-matching": "off",
  "func-names": Array [
    "warn",
    "as-needed",
  ],
  "func-style": "off",
  "function-call-argument-newline": "off",
  "function-paren-newline": "off",
  "generator-star": "off",
  "generator-star-spacing": "off",
  "getter-return": "warn",
  "grouped-accessor-pairs": "off",
  "guard-for-in": "warn",
  "id-denylist": "off",
  "id-length": "off",
  "id-match": "off",
  "implicit-arrow-linebreak": "off",
  "indent": "off",
  "indent-legacy": "off",
  "init-declarations": "off",
  "jsx-quotes": "off",
  "key-spacing": "off",
  "keyword-spacing": "off",
  "line-comment-position": "off",
  "linebreak-style": "off",
  "lines-around-comment": 0,
  "lines-between-class-members": "warn",
  "max-classes-per-file": "off",
  "max-depth": "off",
  "max-len": 0,
  "max-lines": "off",
  "max-lines-per-function": "off",
  "max-nested-callbacks": "off",
  "max-params": "off",
  "max-statements": "off",
  "max-statements-per-line": "off",
  "multiline-comment-style": "off",
  "multiline-ternary": "off",
  "new-cap": "warn",
  "new-parens": "off",
  "newline-per-chained-call": "off",
  "no-alert": "error",
  "no-array-constructor": "error",
  "no-arrow-condition": "off",
  "no-async-promise-executor": "error",
  "no-await-in-loop": "error",
  "no-bitwise": "warn",
  "no-caller": "error",
  "no-case-declarations": "warn",
  "no-class-assign": "error",
  "no-comma-dangle": "off",
  "no-compare-neg-zero": "error",
  "no-cond-assign": Array [
    "warn",
    "except-parens",
  ],
  "no-confusing-arrow": 0,
  "no-console": "warn",
  "no-const-assign": "error",
  "no-constant-condition": "error",
  "no-constructor-return": "error",
  "no-continue": "off",
  "no-control-regex": "warn",
  "no-debugger": "warn",
  "no-delete-var": "off",
  "no-div-regex": "warn",
  "no-dupe-args": "error",
  "no-dupe-class-members": "error",
  "no-dupe-else-if": "warn",
  "no-dupe-keys": "warn",
  "no-duplicate-case": "warn",
  "no-duplicate-imports": "off",
  "no-else-return": "warn",
  "no-empty": "warn",
  "no-empty-character-class": "warn",
  "no-empty-function": "error",
  "no-empty-pattern": "warn",
  "no-eq-null": "error",
  "no-eval": "error",
  "no-ex-assign": "warn",
  "no-extend-native": "error",
  "no-extra-bind": "warn",
  "no-extra-boolean-cast": "warn",
  "no-extra-label": "off",
  "no-extra-parens": "off",
  "no-extra-semi": "off",
  "no-fallthrough": "warn",
  "no-floating-decimal": "off",
  "no-func-assign": "warn",
  "no-global-assign": "warn",
  "no-implicit-coercion": Array [
    "warn",
    Object {
      "boolean": false,
      "number": true,
      "string": true,
    },
  ],
  "no-implicit-globals": "error",
  "no-implied-eval": "error",
  "no-import-assign": "error",
  "no-inline-comments": "off",
  "no-inner-declarations": "warn",
  "no-invalid-regexp": "error",
  "no-invalid-this": "error",
  "no-irregular-whitespace": "warn",
  "no-iterator": "off",
  "no-label-var": "off",
  "no-labels": "error",
  "no-lone-blocks": "off",
  "no-lonely-if": "warn",
  "no-loop-func": "error",
  "no-loss-of-precision": "error",
  "no-magic-numbers": "off",
  "no-misleading-character-class": "warn",
  "no-mixed-operators": 0,
  "no-mixed-spaces-and-tabs": "off",
  "no-multi-assign": "error",
  "no-multi-spaces": "off",
  "no-multi-str": "off",
  "no-multiple-empty-lines": "off",
  "no-negated-condition": "error",
  "no-nested-ternary": "off",
  "no-new": "error",
  "no-new-func": "error",
  "no-new-object": "error",
  "no-new-symbol": "off",
  "no-new-wrappers": "error",
  "no-obj-calls": "error",
  "no-octal": "warn",
  "no-octal-escape": "error",
  "no-param-reassign": "error",
  "no-plusplus": "off",
  "no-promise-executor-return": "error",
  "no-proto": "error",
  "no-prototype-builtins": "error",
  "no-redeclare": "error",
  "no-regex-spaces": "warn",
  "no-reserved-keys": "off",
  "no-restricted-exports": "off",
  "no-restricted-globals": Array [
    "error",
    "addEventListener",
    "blur",
    "close",
    "closed",
    "confirm",
    "defaultStatus",
    "defaultstatus",
    "event",
    "external",
    "find",
    "focus",
    "frameElement",
    "frames",
    "history",
    "innerHeight",
    "innerWidth",
    "length",
    "location",
    "locationbar",
    "menubar",
    "moveBy",
    "moveTo",
    "name",
    "onblur",
    "onerror",
    "onfocus",
    "onload",
    "onresize",
    "onunload",
    "open",
    "opener",
    "opera",
    "outerHeight",
    "outerWidth",
    "pageXOffset",
    "pageYOffset",
    "parent",
    "print",
    "removeEventListener",
    "resizeBy",
    "resizeTo",
    "screen",
    "screenLeft",
    "screenTop",
    "screenX",
    "screenY",
    "scroll",
    "scrollbars",
    "scrollBy",
    "scrollTo",
    "scrollX",
    "scrollY",
    "self",
    "status",
    "statusbar",
    "stop",
    "toolbar",
    "top",
  ],
  "no-restricted-imports": "off",
  "no-restricted-properties": "off",
  "no-restricted-syntax": "off",
  "no-return-assign": "error",
  "no-return-await": "error",
  "no-script-url": "error",
  "no-self-assign": "error",
  "no-self-compare": "error",
  "no-sequences": "error",
  "no-setter-return": "error",
  "no-shadow": "off",
  "no-shadow-restricted-names": "error",
  "no-space-before-semi": "off",
  "no-spaced-func": "off",
  "no-sparse-arrays": "warn",
  "no-tabs": 0,
  "no-template-curly-in-string": "warn",
  "no-ternary": "off",
  "no-this-before-super": "error",
  "no-throw-literal": "error",
  "no-trailing-spaces": "off",
  "no-undef": "error",
  "no-undef-init": "warn",
  "no-undefined": "off",
  "no-underscore-dangle": "off",
  "no-unexpected-multiline": 0,
  "no-unmodified-loop-condition": "error",
  "no-unneeded-ternary": "warn",
  "no-unreachable": "warn",
  "no-unreachable-loop": "off",
  "no-unsafe-finally": "error",
  "no-unsafe-negation": "warn",
  "no-unused-expressions": Array [
    "error",
    Object {
      "allowShortCircuit": true,
      "allowTaggedTemplates": true,
      "allowTernary": true,
    },
  ],
  "no-unused-labels": "off",
  "no-unused-vars": Array [
    "warn",
    Object {
      "args": "none",
      "ignoreRestSiblings": true,
    },
  ],
  "no-use-before-define": Array [
    "warn",
    Object {
      "classes": false,
      "functions": false,
      "variables": false,
    },
  ],
  "no-useless-backreference": "warn",
  "no-useless-call": "error",
  "no-useless-catch": "off",
  "no-useless-computed-key": "warn",
  "no-useless-concat": "error",
  "no-useless-constructor": "warn",
  "no-useless-escape": "warn",
  "no-useless-rename": "warn",
  "no-useless-return": "warn",
  "no-var": "error",
  "no-void": "warn",
  "no-warning-comments": "off",
  "no-whitespace-before-property": "off",
  "no-with": "error",
  "no-wrap-func": "off",
  "nonblock-statement-body-position": "off",
  "object-curly-newline": "off",
  "object-curly-spacing": "off",
  "object-property-newline": "off",
  "object-shorthand": "warn",
  "one-var": Array [
    "warn",
    "never",
  ],
  "one-var-declaration-per-line": "off",
  "operator-assignment": Array [
    "warn",
    "always",
  ],
  "operator-linebreak": "off",
  "padded-blocks": "off",
  "padding-line-between-statements": "off",
  "prefer-arrow-callback": "warn",
  "prefer-const": "warn",
  "prefer-destructuring": "warn",
  "prefer-exponentiation-operator": "warn",
  "prefer-named-capture-group": "off",
  "prefer-numeric-literals": "warn",
  "prefer-object-spread": "warn",
  "prefer-promise-reject-errors": "error",
  "prefer-regex-literals": "error",
  "prefer-rest-params": "error",
  "prefer-spread": "error",
  "prefer-template": "warn",
  "quote-props": "off",
  "quotes": 0,
  "radix": "off",
  "require-atomic-updates": "warn",
  "require-await": "error",
  "require-unicode-regexp": "error",
  "require-yield": "error",
  "rest-spread-spacing": "off",
  "semi": "off",
  "semi-spacing": "off",
  "semi-style": "off",
  "sort-imports": "off",
  "sort-keys": "off",
  "sort-vars": "off",
  "space-after-function-name": "off",
  "space-after-keywords": "off",
  "space-before-blocks": "off",
  "space-before-function-paren": "off",
  "space-before-function-parentheses": "off",
  "space-before-keywords": "off",
  "space-in-brackets": "off",
  "space-in-parens": "off",
  "space-infix-ops": "off",
  "space-return-throw-case": "off",
  "space-unary-ops": "off",
  "space-unary-word-ops": "off",
  "spaced-comment": Array [
    "warn",
    "always",
  ],
  "strict": "off",
  "switch-colon-spacing": "off",
  "symbol-description": "error",
  "template-curly-spacing": "off",
  "template-tag-spacing": "off",
  "unicode-bom": "off",
  "use-isnan": "off",
  "valid-typeof": "warn",
  "vars-on-top": "off",
  "wrap-iife": "off",
  "wrap-regex": "off",
  "yield-star-spacing": "off",
  "yoda": "warn",
}
`;
